<resources>
    <string name="app_author">Scott_Johnston</string>
    <string name="app_contact">none</string>
    <string name="app_name">MiniTrabajo</string>
    <string name="app_description">Application created by Scott Johnston</string>
    <string name="app_address">Address</string>

    <string name="button_login">Sign in</string>
    <string name="button_list">List</string>
    <string name="button_home">Home</string>
    <string name="button_quit">Quit</string>
    <string name="button_save">Save</string>
    <string name="button_search">Search</string>
    <string name="button_phone">Phone</string>
    <string name="button_register">Register</string>
    <string name="button_about">About</string>
    <string name="button_user">User</string>
    <string name="button_map">Map</string>
    <string name="button_message">Message</string>
    <string name="button_setting">Setting</string>
    <string name="button_share">Share</string>

    <string name="default_currency">€</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_permission_request">"Contacts permissions are needed for providing email completions."</string>

    <string name="file_privacy_policy_and_data_protection">privacy_policy_and_data_protection_en.txt</string>
    <string name="file_terms_and_conditions">terms_and_conditions_en.txt</string>

    <string name="google_maps_key">AIzaSyARuf5tWAz_Q3zzqipxSLpKmoGCkYs0BMY</string>

    <string name="label_name">Name</string>
    <string name="label_description">Description</string>
    <string name="label_address">Address</string>
    <string name="label_price">Price</string>
    <string name="label_mobile">Mobile</string>
    <string name="label_rate_day">Day rate</string>
    <string name="label_rate_hour">Hour rate</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">User Name</string>

    <string name="title_base">Base</string>
    <string name="title_list">List</string>
    <string name="title_login">Sign in</string>
    <string name="title_tab">TabActivity</string>
    <string name="title_setting">Settings</string>
    <string name="title_register">Register</string>
    <string name="title_search">Search</string>
    <string name="title_results">Results</string>
    <string name="title_user">User</string>
    <string name="title_map">Map</string>
    <string name="title_test">Test</string>
    <string name="title_main">Home</string>
    <string name="title_about">About</string>
    <string name="title_account">My Profile</string>
    <string name="title_word">Suggest word</string>
    <string name="title_message">Message</string>
    <string name="title_conversation">Conversation</string>
    <string name="title_profile">Profile</string>
    <string name="title_communicate">Communicate</string>

    <string name="url_post_user_account_authenticate">http://minitrabajo.me:3003/authenticate</string>
    <string name="url_post_user_account_register">http://minitrabajo.me:3003/signup</string>
    <string name="url_get_user_account_profile">http://minitrabajo.me:3003/users/getmyprofile</string>
    <string name="url_get_user_account_password_change">http://minitrabajo.me:3003/forgottenpassword</string>
    <string name="url_post_search">http://minitrabajo.me:3003/users/search</string>
    <string name="url_get_user_account_setting">http://minitrabajo.me:3003/setting</string>
    <string name="url_get_user_profile">http://minitrabajo.me:3003/profile</string>
    <string name="url_get_categories">http://minitrabajo.me:3003/categories</string>
    <string name="url_get_messages">http://minitrabajo.me:3003/messages/readalllasts</string>
    <string name="url_post_message">http://minitrabajo.me:3003/messages/add</string>
    <string name="url_post_payment">http://minitrabajo.me:3003/payment/addcredit</string>
    <string name="url_post_rating">http://minitrabajo.me:3003/rating/add</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_base">BaseActivity</string>
</resources>
