<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_search" />
        <item
            android:id="@+id/nav_result"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_results" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting_light"
            android:title="@string/title_setting" />
    </group>

    <item android:title="@string/title_communicate">
        <menu>
            <item
                android:id="@+id/nav_message"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/title_message" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/button_share" />
        </menu>
    </item>

</menu>
